fix: Remove generic-prime-dockview pollution and use correct generic-prime.minilab
Changes:
1. frontend/src/environments/environment.ts: Change dev API base URL from
   generic-prime-dockview.minilab to generic-prime.minilab
2. frontend/Dockerfile.e2e: Update /etc/hosts entry from generic-prime-dockview
   to generic-prime
3. docs/claude/ORIENTATION.md: Document proper backend API access via Traefik ingress
   - All three environments use generic-prime.minilab (hostname-based via /etc/hosts)
   - Frontend app configured to use this URL in development
   - Removed /health endpoint examples (returns 404 via Traefik)
   - Updated with actual API endpoint examples verified to work
   - Updated troubleshooting checklist to match working setup

VERIFIED WORKING with ORIENTATION.md instructions (tested all three environments):
✅ Thor SSH: curl -s "http://generic-prime.minilab/api/specs/v1/vehicles/details?..."
✅ Dev container: podman exec generic-prime-dev node -e '...' via --network host
✅ E2E container: podman run --rm --network=host localhost/generic-prime-e2e:latest

The /etc/hosts mapping abstracts away K8s internals. All environments access
the backend via the same hostname, which routes through Traefik ingress to
the backend service on port 3000.

--- a/frontend/Dockerfile.e2e
+++ b/frontend/Dockerfile.e2e
@@ -2,9 +2,9 @@
 # Using v1.57.0 to match @playwright/test version in package.json
 FROM mcr.microsoft.com/playwright:v1.57.0-jammy
 
-# Add generic-prime-dockview.minilab hostname mapping
-# The backend API is served through dockview on IP 192.168.0.244 (thor)
-RUN echo "192.168.0.244 generic-prime-dockview generic-prime-dockview.minilab" >> /etc/hosts
+# Add generic-prime.minilab hostname mapping for backend API access
+# Maps to Traefik ingress on Thor (192.168.0.244)
+RUN echo "192.168.0.244 generic-prime generic-prime.minilab" >> /etc/hosts
 
 # Set the base working directory.
 WORKDIR /app
