feat: Enable live Playwright report loading without rebuild
Changes:
- Updated ReportComponent to load report dynamically via iframe
- Removed static asset bundling requirement for development
- Added explicit asset serving in angular.json serve config
- Report now updates automatically after each test run

How it works:
1. Run E2E tests: npm run test:e2e
2. Open /report route in browser
3. Report refreshes automatically - no rebuild needed

Benefits:
- Faster feedback loop: test → view report (instant)
- No ng build required after running tests
- Report URL stays consistent at /playwright-report/index.html
- Dev container serves live report directory

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -25,7 +25,12 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "playwright-report",
+                "output": "/report"
+              }
             ],
             "styles": [
               "src/styles.scss"
@@ -67,6 +72,17 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "playwright-report",
+                "output": "/playwright-report"
+              }
+            ]
+          },
           "configurations": {
             "production": {
               "browserTarget": "frontend:build:production"
@@ -93,7 +109,12 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "playwright-report",
+                "output": "/report"
+              }
             ],
             "styles": [
               "src/styles.scss"
