chore: Add Playwright test artifacts to .gitignore and remove from git cache
- Added frontend/playwright-report/ directory
- Added frontend/test-results/ directory
- Added frontend/test-results.json file
- Removed tracked test result files from git cache
- Configuration files (playwright.config.ts) remain tracked

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ Thumbs.db
 
 # Generated documentation
 frontend/documents/
+
+# Playwright E2E test artifacts
+frontend/playwright-report/
+frontend/test-results/
+frontend/test-results.json
