fix: Implement query-parameter-based pop-out window architecture
Replace complex separate-entry-point approach with simple, proven pattern used
by GoldenLayout and other layout libraries: same app URL with ?popout=panelId
query parameter that AppComponent detects to conditionally hide header.

Changes:
- discover.component.ts: Update pop-out URL to include ?popout=panelId
- app.component.ts: Detect popout query param via ActivatedRoute.queryParams
- app.component.html: Conditionally hide header with *ngIf="!isPopOut"
- Removed: popout.html, popout-main.ts, PopoutApp*, SharedPopoutModule
- Reverted: angular.json (removed build-popout config), package.json (removed build:popout script)
- Restored: app.module.ts to declare PanelPopoutComponent directly

Result: Clean, simple architecture following industry best practices. Pop-out
windows load same app with query param flag, AppComponent detects and hides
header. No complex multi-entry-point builds or routing configuration.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build && npm run build:popout",
-    "build:main": "ng build",
-    "build:popout": "ng build --project frontend --main src/popout-main.ts --index src/popout.html --output-path dist/frontend/popout",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "dev:server": "ng serve --host 0.0.0.0 --port 4205",
     "lint": "eslint \"src/**/*.ts\"",
